@@ -1,5 +1,6 @@
 Changes for 1.8.19rc1
 
+...G...... [ZNX-7479] fixed shell command injection into the user parameters (Sasha)
 ....I..... [ZBXNEXT-1256] changed example directory size user parameter to return bytes (Richlv)
 ..F....... [ZBX-7156] fixed string value escaping in profiles (Eduard)
 ...G...... [ZBX-4658] fixed system.boottime and system.uptime returning bogus values on Solaris when agent is compiled as a 64-bit binary (asaveljevs)
